--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       - name: setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.17'
+          go-version: "1.22"
 
       - name: checkout
         uses: actions/checkout@v4
