--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,15 +12,18 @@ jobs:
           - macos-latest
           - windows-latest
         go:
-          - '1.18.0-beta1'
-          - '1.17'
-          - '1.16'
+          - "1.22"
+          - "1.21"
+          - "1.20"
+          - "1.19"
+          - "1.18"
+          - "1.17"
+          - "1.16"
     runs-on: ${{ matrix.os }}
     steps:
       - name: setup Go
         uses: actions/setup-go@v5
         with:
-          stable: 'false'
           go-version: ${{ matrix.go }}
 
       - name: checkout
@@ -50,7 +53,7 @@ jobs:
       - name: setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.17'
+          go-version: "1.22"
 
       - name: checkout
         uses: actions/checkout@v4
@@ -68,4 +71,3 @@ jobs:
         continue-on-error: true
         with:
           version: latest
-          skip-go-installation: true
