run test on NetBSD

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,23 +61,22 @@ jobs:
                                  su action -c 'go test -parallel 1 -race ./...'
 
   # NetBSD
-  # TODO: fix me
-  # netbsd:
-  #   runs-on: "ubuntu-22.04"
-  #   timeout-minutes: 30
-  #   name: test (netbsd, 1.21)
-  #   steps:
-  #     - uses: "actions/checkout@v3"
-  #     - name: "test (netbsd, 1.21)"
-  #       id: "netbsd"
-  #       uses: "vmactions/netbsd-vm@v1"
-  #       with:
-  #         prepare: pkg_add go
-  #         run: |
-  #           go121 version
-  #           useradd -mG wheel action
-  #           FSNOTIFY_BUFFER=4096 su action -c 'go121 test -parallel 1 -race ./...'
-  #                                su action -c 'go121 test -parallel 1 -race ./...'
+  netbsd:
+    runs-on: "ubuntu-22.04"
+    timeout-minutes: 30
+    name: test (netbsd, 1.21)
+    steps:
+      - uses: "actions/checkout@v3"
+      - name: "test (netbsd, 1.21)"
+        id: "netbsd"
+        uses: "vmactions/netbsd-vm@v1"
+        with:
+          prepare: pkg_add go
+          run: |
+            go121 version
+            useradd -mG wheel action
+            FSNOTIFY_BUFFER=4096 su action -c 'go121 test -parallel 1 -race ./...'
+                                 su action -c 'go121 test -parallel 1 -race ./...'
 
   lint:
     runs-on: ubuntu-latest
